# mcu-hal-sim-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  package-lock.json  package.json  playwright.config.js  rustfmt.toml
.cargo/: config.toml
.codex/: AGENTS.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
crates/core-app/: Cargo.toml  README.md  climate_display.rs  imu_logger.rs  lib.rs
crates/hal-api/: Cargo.toml  README.md  actuator.rs  adapter.rs  camera.rs  display.rs  distance.rs  error.rs  gas.rs  gpio.rs  i2c.rs  imu.rs  lib.rs  light.rs  pwm.rs  rtc.rs  sensor.rs  shared_i2c.rs
crates/platform-avr/: Cargo.toml  README.md  bme280.rs  gpio.rs  i2c.rs  lcd1602.rs  lib.rs
crates/platform-avr/tests/: app_bridge.rs  climate_bridge.rs
crates/platform-esp32/: Cargo.toml  README.md  bh1750.rs  bme280.rs  delay.rs  dht22.rs  ds3231.rs  esp32_hal.rs  gpio.rs  hc_sr04.rs  i2c.rs  l298n.rs  lcd1602.rs  lib.rs  main.rs  mpu6050.rs  pwm.rs  servo.rs  sgp30.rs  shared_i2c.rs  ssd1306.rs  types.rs  vl53l0x.rs
crates/platform-esp32/tests/: app_bridge.rs  climate_bridge.rs  new_sensor_bridge.rs  new_sensor_bridge2.rs  servo_motor_bridge.rs
crates/platform-pc-sim/: Cargo.toml  README.md  bh1750_mock.rs  bme280_mock.rs  camera_mock.rs  climate_dashboard_sim.rs  climate_display_sim.rs  climate_sim.rs  component_sim.rs  dashboard.rs  device_dashboard_web.rs  dht22_mock.rs  ds3231_mock.rs  hc_sr04_mock.rs  l298n_mock.rs  lcd1602_mock.rs  lib.rs  main.rs  mock_hal.rs  mpu6050_mock.rs  pwm_mock.rs  servo_mock.rs  sgp30_mock.rs  ssd1306_mock.rs  virtual_i2c.rs  vl53l0x_mock.rs  web_dashboard.rs  wiring_config.rs  wiring_svg.rs
crates/platform-pc-sim/device_dashboard_web/: flash.rs  http_util.rs  sim_rig.rs
crates/platform-pc-sim/tests/: app_integration.rs  bh1750_host_bridge.rs  bme280_host_bridge.rs  ds3231_host_bridge.rs  hc_sr04_host_bridge.rs  l298n_host_bridge.rs  lcd1602_host_bridge.rs  mpu6050_host_bridge.rs  servo_host_bridge.rs  sgp30_host_bridge.rs  vl53l0x_host_bridge.rs
crates/platform-pc-sim/web_dashboard/: html.rs  mod.rs
crates/platform-rp2040/: Cargo.toml  README.md  bme280.rs  gpio.rs  i2c.rs  lcd1602.rs  lib.rs  shared_i2c.rs
crates/platform-rp2040/tests/: app_bridge.rs  climate_bridge.rs
crates/reference-drivers/: Cargo.toml  README.md  bh1750.rs  bme280.rs  dht22.rs  ds3231.rs  esp32_cam.rs  hc_sr04.rs  l298n.rs  lcd1602.rs  lib.rs  mpu6050.rs  servo.rs  sgp30.rs  ssd1306.rs  vl53l0x.rs
docs/: dashboard-guide.md  porting-and-extension-guide.md  requirements_20260630.md  requirements_20260711.md  sensors-and-actuators.md  simulation-bridge.md
examples/: basic_blink.rs  custom_timing.rs  i2c_read.rs
firmware/arduino-nano-bringup/: Cargo.toml  README.md
firmware/arduino-nano-bringup/src/: main.rs
firmware/arduino-nano-climate-display/: Cargo.toml  README.md
firmware/arduino-nano-climate-display/src/: main.rs
firmware/m5stickc-bringup/: Cargo.toml  README.md
firmware/m5stickc-bringup/src/: lib.rs  main.rs  report.rs
firmware/original-esp32-bringup/: Cargo.toml  README.md
firmware/original-esp32-bringup/src/: main.rs
firmware/original-esp32-climate-display/: Cargo.toml  README.md
firmware/original-esp32-climate-display/src/: main.rs
firmware/original-esp32-ota-bringup/: Cargo.toml  README.md  sdkconfig.defaults
firmware/original-esp32-ota-bringup/.cargo/: config.toml
firmware/original-esp32-ota-bringup/ota-http/: Cargo.toml
firmware/original-esp32-ota-bringup/ota-http/src/: lib.rs
firmware/original-esp32-ota-bringup/src/: main.rs
firmware/original-esp32-robot-base/: Cargo.toml  README.md
firmware/original-esp32-robot-base/.cargo/: config.toml
firmware/original-esp32-robot-base/src/: main.rs
firmware/original-esp32-wifi-climate/: .env.example  .gitignore  Cargo.toml  README.md  build.rs  partitions.csv
firmware/original-esp32-wifi-climate/.cargo/: config.toml
firmware/original-esp32-wifi-climate/src/: main.rs
firmware/raspi-pico-bringup/: Cargo.toml  README.md  rust-toolchain.toml
firmware/raspi-pico-bringup/src/: main.rs
firmware/raspi-pico-climate-display/: Cargo.toml  README.md
firmware/raspi-pico-climate-display/.cargo/: config.toml
firmware/raspi-pico-climate-display/src/: main.rs
scripts/: README.md  check-workspace-boundaries.sh  ci-local.sh  ci-wait.sh  dev-loop.sh  flash-esp32.sh  gh-workflow.sh
tests/e2e/: cross-browser-smoke.spec.js  device-dashboard.spec.js
