[workspace]
resolver = "2"
members = [
    "crates/hal-api",
    "crates/core-app",
    "crates/reference-drivers",
    "crates/platform-pc-sim",
    "crates/platform-avr",
    "crates/platform-esp32",
    "crates/platform-rp2040",
]

[workspace.dependencies]
embedded-hal = "1.0"
heapless = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[package]
name = "mcu-hal-sim-rs"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
repository = "https://github.com/1222-takeshi/mcu-hal-sim-rs"
readme = "README.md"

[dependencies]
hal-api = { version = "0.1.0", path = "crates/hal-api" }
core-app = { version = "0.1.0", path = "crates/core-app" }
platform-pc-sim = { version = "0.1.0", path = "crates/platform-pc-sim" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
