[package]
name = "platform-avr"
version = "0.1.0"
edition = "2021"
description = "AVR adapters for the sim-to-real path in mcu-hal-sim-rs"
license = "MIT"
repository = "https://github.com/1222-takeshi/mcu-hal-sim-rs"
documentation = "https://docs.rs/platform-avr"
readme = "README.md"
keywords = ["embedded", "avr", "arduino", "hal", "no-std"]
categories = ["embedded", "no-std", "hardware-support"]
rust-version = "1.66"
publish = false

[dependencies]
embedded-hal = "1.0"
hal-api = { version = "0.1.0", path = "../hal-api" }

[lib]
path = "lib.rs"

[dev-dependencies]
core-app = { version = "0.1.0", path = "../core-app" }
