[package]
name = "platform-esp32"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["core-app/std", "hal-api/std"]
esp32c3 = ["dep:esp-hal"]

[dependencies]
core-app = { path = "../core-app", default-features = false }
hal-api = { path = "../hal-api", default-features = false }
embedded-hal = "1.0.0"
esp-hal = { version = "0.22.0", optional = true, default-features = false, features = ["esp32c3"] }

[[bin]]
name = "platform-esp32"
path = "main.rs"
