[package]
name = "platform-esp32"
version = "0.1.0"
edition = "2021"
description = "ESP32 adapters and reference drivers for the sim-to-real path in mcu-hal-sim-rs"
license = "MIT"
repository = "https://github.com/1222-takeshi/mcu-hal-sim-rs"
documentation = "https://docs.rs/platform-esp32"
readme = "README.md"
keywords = ["embedded", "esp32", "bme280", "lcd1602", "hal"]
categories = ["embedded", "no-std", "hardware-support"]
rust-version = "1.66"
publish = false

[dependencies]
embedded-hal = "1.0"
hal-api = { version = "0.1.0", path = "../hal-api" }
reference-drivers = { version = "0.1.0", path = "../reference-drivers" }

[lib]
path = "lib.rs"

[dev-dependencies]
core-app = { version = "0.1.0", path = "../core-app" }
