[package]
name = "platform-pc-sim"
version = "0.1.0"
edition = "2021"
description = "PC simulator helpers and host-side mocks for mcu-hal-sim-rs"
license = "MIT"
repository = "https://github.com/1222-takeshi/mcu-hal-sim-rs"
documentation = "https://docs.rs/platform-pc-sim"
readme = "README.md"
keywords = ["embedded", "simulator", "mock", "hal", "testing"]
categories = ["embedded", "development-tools::testing"]
rust-version = "1.66"

[dependencies]
hal-api = { version = "0.1.0", path = "../hal-api" }
core-app = { version = "0.1.0", path = "../core-app" }
embedded-hal = "1.0"
reference-drivers = { version = "0.1.0", path = "../reference-drivers" }
sha1_smol = "1.0"
base64 = "0.22"

[lib]
path = "lib.rs"

[dev-dependencies]
platform-esp32 = { version = "0.1.0", path = "../platform-esp32" }

[[bin]]
name = "platform-pc-sim"
path = "main.rs"

[[bin]]
name = "climate-display-sim"
path = "climate_display_sim.rs"

[[bin]]
name = "climate-dashboard-sim"
path = "climate_dashboard_sim.rs"

[[bin]]
name = "device-dashboard-web"
path = "device_dashboard_web.rs"
