[package]
name = "arduino-nano-climate-display"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[[bin]]
name = "arduino-nano-climate-display"
path = "src/main.rs"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
embedded-hal = "1.0"
arduino-hal = { git = "https://github.com/rahix/avr-hal", rev = "e5c8f37fe48419956e722490a82b9ca9b9fc61a2", features = ["arduino-nano"] }
platform-avr = { path = "../../crates/platform-avr" }
core-app = { path = "../../crates/core-app", default-features = false }
hal-api = { path = "../../crates/hal-api", default-features = false }

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
