[package]
name = "original-esp32-ota-bringup"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

# OTA bringup firmware for original ESP32 (WROOM-32).
#
# WiFi credentials and OTA token are injected at compile time via environment variables:
#   OTA_WIFI_SSID=<ssid> OTA_WIFI_PSK=<password> OTA_AUTH_TOKEN=<token> cargo build --release
#
# Dependencies:
#   esp-idf-svc — ESP-IDF service wrappers for WiFi, NVS, OTA, and logging.

[dependencies]
esp-idf-svc = "0.52.1"

[build-dependencies]
embuild = "0.33.1"

[profile.release]
debug            = true
debug-assertions = false
opt-level        = "s"
lto              = true
codegen-units    = 1
