[package]
name = "raspi-pico-climate-display"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[[bin]]
name = "raspi-pico-climate-display"
path = "src/main.rs"
test = false
bench = false

[dependencies]
rp-pico = "0.9"
embedded-hal = "1.0"
panic-halt = "1.0"
fugit = "0.3"
cortex-m = "0.7"
cortex-m-rt = "0.7"
platform-rp2040 = { path = "../../crates/platform-rp2040" }
core-app = { path = "../../crates/core-app", default-features = false }
hal-api = { path = "../../crates/hal-api", default-features = false }

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
